--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                           <a class="nav-link" href="Directors.html">Directors</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" onclick="window.open('FairPracticesCode.pdf'); return true;" style="color: #fff;cursor: pointer;">fare practice code</a>
+                            <a class="nav-link" onclick="window.open('FairPracticesCode.pdf'); return true;" style="color: #fff;cursor: pointer;">Fair Practice Code</a>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link" onclick="window.open('Interest_rates.pdf'); return true;" style="color: #fff;cursor: pointer;">interext rates</a>
