--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                             <a class="nav-link" onclick="window.open('FairPracticesCode.pdf'); return true;" style="color: #fff;cursor: pointer;">Fair Practice Code</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" onclick="window.open('Interest_rates.pdf'); return true;" style="color: #fff;cursor: pointer;">interext rates</a>
+                          <a class="nav-link" onclick="window.open('Interest_rates.pdf'); return true;" style="color: #fff;cursor: pointer;">Interest Rates</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" onclick="window.open('CSR_Policy_PLFS.pdf'); return true;" style="color: #fff;cursor: pointer;">CRS policy</a>
+                          <a class="nav-link" onclick="window.open('CSR_Policy_PLFS.pdf'); return true;" style="color: #fff;cursor: pointer;">CSR Policy</a>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link" href="contact_us.html">Contact Us</a>
