--- a/contact_us.html
+++ b/contact_us.html
@@ -64,7 +64,7 @@
                        <div class="telbox">
                        <p>Tel : +91 22 6632 2204 / 08 / 09</p>
                        <p>Fax : +91 22 6632 2229</p>
-                       <p>Email : <a href="#">PLF-Funding@PLIndia.com</a></p>
+                       <p>Email : <a href="mailto:PLF-Funding@PLIndia.com">PLF-Funding@PLIndia.com</a></p>
                    </div>
                    </div>
                 </div>
