--- a/contact_us.html
+++ b/contact_us.html
@@ -10,7 +10,7 @@
 <body>
     <section class="topsec">
         <div class="container ">
-            <div class="imgbox cc"><img src="assets/img/PLFSBannar.jpg" alt=""></div>
+            <div class="imgbox cc"><img src="assets/img/PLFSBannar.png" alt=""></div>
         </div>
     </section>
     <section class="midsec">
